# cv-lab

./: canny.ipynb  detecters.py  filters.py  lab1.ipynb  lab2.2.ipynb  lab2.3.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  noise.py  pyproject.toml  test.ipynb  test.py  utils.py
